# cuddly-doodle

./: .gitignore  README.md  pyproject.toml
tasks/strings/: task_1_capitalize.py  task_2_isdigit.py  task_3_reverse.py  task_4_clearing.py  task_5_subsctring.py  task_6_format.py
tests/strings/: test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py  test_task_5.py  test_task_6.py
